--- a/index.css
+++ b/index.css
@@ -49,6 +49,10 @@ a{
     font-family: 'Roboto Mono', monospace;
 /*header section styles*/
 }
+a:hover{
+    background-color:white;
+    color:black;
+}
 nav{
     padding:2% 0;
 }
@@ -124,8 +128,7 @@ nav a{
     width:5%;
     margin-left:50%;
     margin-right:50%;
-   
-
+  
 }
 .mid1 p{
     text-align:center;
